test/langtools/tools/javac/switchnull/SwitchNullNegative.out
SwitchNullNegative.java:10:13: compiler.err.switch.null.must.be.first
SwitchNullNegative.java:17:13: compiler.err.switch.null.must.be.reference
SwitchNullNegative.java:25:13: compiler.err.switch.null.must.be.first
SwitchNullNegative.java:32:13: compiler.err.switch.null.must.be.reference
4 errors
